Adapt to Java 1.8, add option to use markdown in messasges